navbar y estilos globales

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from "../components/Navigation.astro";
+
 
 ---
 
@@ -11,6 +13,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<Navigation />
 		<h1>Mi sitio Astro</h1>
 	</body>
 </html>
