--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,11 @@
 ---
+import Navigation from "../components/Navigation.astro";
+
 
 ---
 
 <body>
-  <a href="/">Inicio</a>
-  <a href="/about">Sobre mi</a>
+  <Navigation />
   <h1>Mi blog de Astro aprendizaje</h1>
   <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
   <ul>
