--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 
 
@@ -15,4 +16,5 @@ import Navigation from "../components/Navigation.astro";
         <a href="/posts/post-3">Publicación 3</a>
     </li>
   </ul>
+  <Footer />
 </body>
