--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 
 
@@ -15,5 +16,6 @@ import Navigation from "../components/Navigation.astro";
 	<body>
 		<Navigation />
 		<h1>Mi sitio Astro</h1>
+		<Footer />
 	</body>
 </html>
