--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,15 @@
 import Social from "./Social.astro";
 ---
 
+<style>
+  footer {
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+    align-items: center;
+  }
+</style>
+
 <footer>
   <p>Enlace a mis redes sociales.</p>
 
