--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -5,10 +5,12 @@ const { platForm, userName } = Astro.props;
 
 <style>
     a {
-        padding: 0.5rem 1rem;
+        padding: 0.5rem;
         color: white;
         background-color: #4c1d95;
         text-decoration: none;
         border-radius: 5px;
+        display: flex;
+        align-items: center;
     }
 </style>
