--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,7 @@
 import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
 import "../styles/globlal.css";
+import Header from "../components/Header.astro";
 
 const pageTitle = "Sobre mi";
 
@@ -50,7 +51,7 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>{pageTitle}</h1>
     <h2>... ¡y mi nuevo sitio Astro!</h2>
     <p>
@@ -81,5 +82,8 @@ const textCase = "uppercase";
     {finished && <p>¡He terminado este tutorial!</p>}
     {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
