--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,12 @@
 ---
 import Footer from "../components/Footer.astro";
 import Navigation from "../components/Navigation.astro";
-
-
+import "../styles/globlal.css";
+import Header from "../components/Header.astro";
 ---
 
 <body>
-  <Navigation />
+  <Header />
   <h1>Mi blog de Astro aprendizaje</h1>
   <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
   <ul>
@@ -17,4 +17,7 @@ import Navigation from "../components/Navigation.astro";
     </li>
   </ul>
   <Footer />
+  <script>
+    import "../scripts/menu.js";
+  </script>
 </body>
