--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,22 +1,20 @@
 ---
-import Footer from "../components/Footer.astro";
-import Navigation from "../components/Navigation.astro";
 import "../styles/globlal.css";
-import Header from "../components/Header.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <body>
-  <Header />
-  <h1>Mi blog de Astro aprendizaje</h1>
-  <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
-  <ul>
-    <li>
+  <BaseLayout>
+    <h1>Mi blog de Astro aprendizaje</h1>
+    <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+    <ul>
+      <li>
         <a href="/posts/post-1">Publicación 1</a>
         <a href="/posts/post-2">Publicación 2</a>
         <a href="/posts/post-3">Publicación 3</a>
-    </li>
-  </ul>
-  <Footer />
+      </li>
+    </ul>
+  </BaseLayout>
   <script>
     import "../scripts/menu.js";
   </script>
