--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,7 +5,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 <body>
   <BaseLayout>
-    <h1>Mi blog de Astro aprendizaje</h1>
+    <h1 class="page-title">Mi blog de Astro aprendizaje</h1>
     <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
     <ul>
       <li>
