--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Página de  inicio";
+import "../styles/globlal.css";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
