--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,19 @@
 ---
-import "../styles/globlal.css";
 import BaseLayout from "../layouts/BaseLayout.astro";
+const allPosts = await Astro.glob("../pages/posts/*.md");
+const pageTitle = "Mi blog de Astro, aprendizaje.";
+import BlogPost from "../components/BlogPost.astro";
 ---
 
 <body>
-  <BaseLayout>
-    <h1 class="page-title">Mi blog de Astro aprendizaje</h1>
+  <BaseLayout pageTitle={pageTitle}>
     <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
     <ul>
-      <li>
-        <a href="/posts/post-1">Publicación 1</a>
-        <a href="/posts/post-2">Publicación 2</a>
-        <a href="/posts/post-3">Publicación 3</a>
-      </li>
+      {
+        allPosts.map((post) => (
+          <BlogPost url={post.url} title={post.frontmatter.title} />
+        ))
+      }
     </ul>
   </BaseLayout>
   <script>
