--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,16 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Página de  inicio";
 import "../styles/globlal.css";
 ---
-
-<BaseLayout pageTitle={pageTitle}>
-	<h2>Mi subtitulo del blog</h2>
-</BaseLayout>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{pageTitle}</title>
+</head>
+<body>
+	<BaseLayout pageTitle={pageTitle}>
+		<h2>Mi subtitulo del blog</h2>
+	</BaseLayout>
+</body>
+</html>
