--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,11 +2,13 @@
 import Navigation from "./Navigation.astro";
 import Hamburger from "./Hamburger.astro";
 import "../styles/globlal.css";
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
     <nav>
         <Hamburger />
+        <ThemeIcon />
         <Navigation />
     </nav>
 </header>
