--- a/src/styles/globlal.css
+++ b/src/styles/globlal.css
@@ -1,105 +1,106 @@
 html {
-    background-color: #f1f5f9;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #e8e8f8;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #0b0a1f;
 }
 
 body {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 80ch;
-    padding: 1rem;
-    line-height: 1.5;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 80ch;
+  padding: 1rem;
+  line-height: 1.5;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1 {
-    color: purple;
-    margin: 1rem 0;
-    font-size: 2.5rem;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: unset;
-}
-
-.page-title {
-    font-size: 4rem;
+  color: purple;
+  margin: 1rem 0;
+  font-size: 2.5rem;
 }
 
 /* estilos de la barra de navegación */
 
 .hamburger {
-    padding-right: 20px;
-    cursor: pointer;
+  padding-right: 20px;
+  cursor: pointer;
 }
 
 .hamburger .line {
-    display: block;
-    width: 40px;
-    height: 5px;
-    margin-bottom: 10px;
-    background-color: #ff9776;
+  display: block;
+  width: 40px;
+  height: 5px;
+  margin-bottom: 10px;
+  background-color: #ff9776;
 }
 
 .nav-links {
-    width: 100%;
-    top: 5rem;
-    left: 48px;
-    background-color: #ff9776;
-    display: none;
-    margin: 0;
+  width: 100%;
+  top: 5rem;
+  left: 48px;
+  background-color: #ff9776;
+  display: none;
+  margin: 0;
 }
 
 .nav-links a {
-    display: block;
-    text-align: center;
-    padding: 10px 0;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
-.nav-links a:hover, .nav-links a:focus {
-    background-color: #ff9776;
-    border-radius: 5px;
+.nav-links a:hover,
+.nav-links a:focus {
+  background-color: #ff9776;
+  border-radius: 5px;
 }
 
 .expanded {
-    display: unset;
+  display: unset;
 }
 
-.html.dark {
-    background-color: #0d0950;
-    color: #fff;
+.html dark {
+  background-color: #0d0950;
+  color: #fff;
 }
 
 .dark .nav-links a {
-    color: #fff;
+  color: #fff;
+}
+
+.btn-saludo {
+  padding: 0.5rem;
+  color: white;
+  background-color: #4c1d95;
+  text-decoration: none;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
 }
 
 @media screen and (min-width: 636px) {
-    .nav-links {
-        margin-left: 5rem;
-        display: block;
-        position: static;
-        width: auto;
-        background: none;
-    }
+  .nav-links {
+    margin-left: 5rem;
+    display: block;
+    position: static;
+    width: auto;
+    background: none;
+  }
 
-    .nav-links a {
-        display: inline-block;
-        padding: 15px 20px;
-    }
+  .nav-links a {
+    display: inline-block;
+    padding: 15px 20px;
+  }
 
-    .hamburger {
-        display: none;
-    }
+  .hamburger {
+    display: none;
+  }
 }
