--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -15,6 +15,7 @@ import BlogPost from "../components/BlogPost.astro";
         ))
       }
     </ul>
+    <a href="/tags">Indice de etiquetas</a>
   </BaseLayout>
   <script>
     import "../scripts/menu.js";
