--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,12 @@ import "../styles/globlal.css";
 </head>
 <body>
 	<BaseLayout pageTitle={pageTitle}>
-		<h2>Mi subtitulo del blog</h2>
+		<h2>Bienvenidos al blog de Toneti</h2>
 		<Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+		<p>Esto es un blog personal donde intentaré ir actualizandolo con más herramientas para que sea más interactivo.
+			No pretendo hacer grandes cosas pero me gustaría implementar una base de datos donde ir guardando toda la información creada.
+		</p>
+		<h4>Un saludo y hasta la próxima!!</h6>
 	</BaseLayout>
 </body>
 </html>
